// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewListEditorField component should render new list editor component with the given List 1`] = `
<DocumentFragment>
  <div
    id="test-list-editor"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-153e7at-MuiGridLegacy-root"
      data-testid="test-form-add"
      id="test-form-add"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
        style="flex-grow: 1;"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="test-input"
            id="test-input-label"
          >
            Item name
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
              data-analyticsid="test-input"
              data-testid="test-input"
              id="test-input"
              placeholder="Please type the item name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-2 css-1vwyvuc-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-add"
          data-testid="test-add"
          disabled=""
          id="test-add"
          tabindex="-1"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      style="flex-grow: 1; padding: 8px;"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-nofpn4-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 css-28o34x-MuiGridLegacy-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
          >
            Name
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 css-vzojd3-MuiGridLegacy-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
          >
            Reorder items
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
        >
          <span
            aria-label="Remove all items"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="delete-all-test"
              data-testid="delete-all-test"
              id="delete-all-test"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteForeverIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="test-list"
      id="test-list"
    >
      <div
        data-testid="test-list-row-0"
        id="test-list-row-0"
        style="flex-grow: 1; padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1sh733u-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 MuiGridLegacy-grid-md-9 css-13ylua5-MuiGridLegacy-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            >
              test
            </p>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-2 css-1qg20ba-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container css-1gtb4jl-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <span
                  aria-label="Move item down the order"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                    data-analyticsid="test-list-row-0-move-down"
                    data-testid="test-list-row-0-move-down"
                    id="test-list-row-0-move-down"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="KeyboardArrowDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
          >
            <span
              aria-label="Remove this item"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-analyticsid="test-list-row-0-delete"
                data-testid="test-list-row-0-delete"
                id="test-list-row-0-delete"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="test-list-row-1"
        id="test-list-row-1"
        style="flex-grow: 1; padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1sh733u-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 MuiGridLegacy-grid-md-9 css-13ylua5-MuiGridLegacy-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            >
              testing
            </p>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-2 css-1qg20ba-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container css-1gtb4jl-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <span
                  aria-label="Move item up the order"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                    data-analyticsid="test-list-row-1-move-up"
                    data-testid="test-list-row-1-move-up"
                    id="test-list-row-1-move-up"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="KeyboardArrowUpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
          >
            <span
              aria-label="Remove this item"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-analyticsid="test-list-row-1-delete"
                data-testid="test-list-row-1-delete"
                id="test-list-row-1-delete"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <p
      class="MuiFormHelperText-root Mui-error css-u90aml-MuiFormHelperText-root"
    >
      test1
    </p>
  </div>
</DocumentFragment>
`;

exports[`NewListEditorField component should render new list editor component with the given array 1`] = `
<DocumentFragment>
  <div
    id="test-list-editor"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-153e7at-MuiGridLegacy-root"
      data-testid="test-form-add"
      id="test-form-add"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
        style="flex-grow: 1;"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="test-input"
            id="test-input-label"
          >
            Item name
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
              data-analyticsid="test-input"
              data-testid="test-input"
              id="test-input"
              placeholder="Please type the item name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-2 css-1vwyvuc-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-add"
          data-testid="test-add"
          disabled=""
          id="test-add"
          tabindex="-1"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      style="flex-grow: 1; padding: 8px;"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-nofpn4-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 css-28o34x-MuiGridLegacy-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
          >
            Name
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 css-vzojd3-MuiGridLegacy-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
          >
            Reorder items
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
        >
          <span
            aria-label="Remove all items"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
              data-analyticsid="delete-all-test"
              data-testid="delete-all-test"
              id="delete-all-test"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="DeleteForeverIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="test-list"
      id="test-list"
    >
      <div
        data-testid="test-list-row-0"
        id="test-list-row-0"
        style="flex-grow: 1; padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1sh733u-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 MuiGridLegacy-grid-md-9 css-13ylua5-MuiGridLegacy-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            >
              test
            </p>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-2 css-1qg20ba-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container css-1gtb4jl-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <span
                  aria-label="Move item down the order"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                    data-analyticsid="test-list-row-0-move-down"
                    data-testid="test-list-row-0-move-down"
                    id="test-list-row-0-move-down"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="KeyboardArrowDownIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
          >
            <span
              aria-label="Remove this item"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-analyticsid="test-list-row-0-delete"
                data-testid="test-list-row-0-delete"
                id="test-list-row-0-delete"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="test-list-row-1"
        id="test-list-row-1"
        style="flex-grow: 1; padding: 8px;"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1sh733u-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-6 MuiGridLegacy-grid-md-9 css-13ylua5-MuiGridLegacy-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            >
              testing
            </p>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-5 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-2 css-1qg20ba-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container css-1gtb4jl-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <span
                  aria-label="Move item up the order"
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                    data-analyticsid="test-list-row-1-move-up"
                    data-testid="test-list-row-1-move-up"
                    id="test-list-row-1-move-up"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                      data-testid="KeyboardArrowUpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 css-1p4ueyk-MuiGridLegacy-root"
          >
            <span
              aria-label="Remove this item"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-analyticsid="test-list-row-1-delete"
                data-testid="test-list-row-1-delete"
                id="test-list-row-1-delete"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <p
      class="MuiFormHelperText-root Mui-error css-u90aml-MuiFormHelperText-root"
    >
      test1
    </p>
  </div>
</DocumentFragment>
`;

exports[`NewListEditorField component should render new list editor component without any list items 1`] = `
<DocumentFragment>
  <div
    id="test-list-editor"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-153e7at-MuiGridLegacy-root"
      data-testid="test-form-add"
      id="test-form-add"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
        style="flex-grow: 1;"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="test-input"
            id="test-input-label"
          >
            Item name
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
              data-analyticsid="test-input"
              data-testid="test-input"
              id="test-input"
              placeholder="Please type the item name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-2 css-1vwyvuc-MuiGridLegacy-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-alav1n-MuiButtonBase-root-MuiButton-root"
          data-analyticsid="test-add"
          data-testid="test-add"
          disabled=""
          id="test-add"
          tabindex="-1"
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      data-testid="test-list"
      id="test-list"
    />
    <p
      class="MuiFormHelperText-root css-u90aml-MuiFormHelperText-root"
    />
  </div>
</DocumentFragment>
`;
